# project-template-selector

./: jest.config.js  package-lock.json  package.json  readme.md  tsconfig.json
.github/workflows/: npm-publish.yml
src/: index.test.ts  index.ts  menu.ts  templates.ts
src/templates/python-poetry-app/: gitignore  pyproject.toml  readme.md
src/templates/python-poetry-app/template/: __init__.py
src/templates/python-poetry-app/tests/: test_template.py
src/templates/typescript-app/: .eslintrc.js  package.json  readme.md
src/templates/typescript-package/: jest.config.js  package.json  readme.md  tsconfig.json
