[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["Isur <bednarczykartur96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "7.1.1"
pytest-cov = "^3.0.0"
coverage = "^6.4.1"
pylint = "^2.14.2"
pycodestyle = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "template:main"